--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python ./test_bench.py
+  - ls
+  - chmod +x test_bench.py
+  - ./test_bench.py
